Add images, without logic